@@ -15,7 +15,7 @@
     <description>Team oversikt</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>14</java.version>
 
         <springfox.version>2.9.2</springfox.version>
         <swagger.version>1.6.1</swagger.version>
@@ -409,8 +409,20 @@
                 </executions>
             </plugin>
             <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <release>14</release>
+                <compilerArgs>
+                    <arg>--enable-preview</arg>
+                </compilerArgs>
+                <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                <parameters>true</parameters>
+            </configuration>
+        </plugin>
+            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>--enable-preview</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
